--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#FFDE03",
     "icons": [
         {
-            "src": "Icon.png",
+            "src": "assets/Icon.png",
             "sizes": "1000x1000",
             "type": "image/png"
         }
